# BootcampPythonJornadaDeDados

./: .gitmodules  README.md  pyproject.toml  readme.md  test_ctypes.py
aula01/: desafio.py  exemplo_01.py  exemplo_02.py  exercicios.py  readme.md
aula02/: desafio.py  exercicios.py  main.py  readme.md
